@@ -1,7 +1,8 @@
 0.3.8 -- 21 March 2014.
 
 Support for ggplotly layout elements title, tickcolor, gridcolor,
-showlegend, plot_bgcolor, paper_bgcolor.
+showlegend, plot_bgcolor, paper_bgcolor, tickangle, axis titles, plot
+border colors.
 
 0.3.7 -- 14 March 2014.
 
